Fixed the body spacing
Update the padding and line-height to MVGA style.

--- a/_sass/city-of-melbourne.scss
+++ b/_sass/city-of-melbourne.scss
@@ -117,8 +117,8 @@ nav.navbar {
 
 .markdown {
   p {
-    margin-bottom: 1em;
-    line-height: 1.5;
+    margin: 0px 0px 10px 0px;
+    line-height: 1.6;
   }
 
   h1,
@@ -134,7 +134,7 @@ nav.navbar {
     font-weight: normal;
     color: $color-secondary-blue;
     border-bottom: 2px solid $color-silver-gray;
-    margin: 30px -;
+    margin: 30px 0;
   }
 
   h2 {
